Trailhead2022/force-app/main/default/objects/Syndication__c/Syndication__c.object-meta.xml
<CustomObject>
    <label>Syndication</label>
    <nameField>
        <displayFormat>SYN-{0}</displayFormat>
        <label>Syndication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Syndications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>