Trailhead2022/force-app/main/default/objects/Syndication__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>End_Date__c &gt;=  TODAY() &amp;&amp;
Start_Date__c &lt;= TODAY()</formula>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>