Trailhead2022/force-app/main/default/objects/Syndication__c/fields/Show__c.field-meta.xml
<CustomField>
    <fullName>Show__c</fullName>
    <label>Show</label>
    <referenceTo>Show__c</referenceTo>
    <relationshipLabel>Syndications</relationshipLabel>
    <relationshipName>Syndications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>