Trailhead2022/force-app/main/default/objects/Syndication__c/fields/Subscriber_Station_Network__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Station_Network__c</fullName>
    <label>Subscriber Station/Network</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Syndications</relationshipLabel>
    <relationshipName>Syndications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>